# rust-c99

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: CMakeLists.txt  c99-gen.c  c99.h  lib.rs
