[package]
name = "c99"
version = "1.0.0"
authors = ["Vojtech Kral <vojtech@kral.pm>"]
license = "BSD-2-Clause"

description = "C99 types for easier interop"
homepage = "https://github.com/vojtechkral/rust-c99"
repository = "https://github.com/vojtechkral/rust-c99"

build = "build.rs"

[build-dependencies]
bindgen = "0.63.0"
